# nixy

./: Cargo.toml  LICENSE  README.md  nixy.yaml  shell.nix
src/: main.rs  nixy.rs
tests/data/: shell.nix
